civilian_race refactoring

--- a/raw_data/replicating_ppcs.Rmd
+++ b/raw_data/replicating_ppcs.Rmd
@@ -71,7 +71,7 @@ merged_ppcs <- merged_ppcs %>%
       pepper_stun == 1, 1, 0),
     
     year = as.factor(year),
-    civilian_race = as.factor(civilian_race),
+    civilian_race = factor(civilian_race, levels = c("white", "black", "hispanic", "other")),
     civilian_gender = as.factor(civilian_gender),
     civilian_income = as.factor(civilian_income),
     civilian_employed = as.factor(civilian_employed),
