--- a/raw_data/replicating_ppcs.Rmd
+++ b/raw_data/replicating_ppcs.Rmd
@@ -69,7 +69,7 @@ merged_ppcs <- merged_ppcs %>%
       point_gun == 1 |
       hit_kick == 1  |
       pepper_stun == 1, 1, 0),
-    
+    off_split = ifelse(is.na(off_split), 0, 1),
     year = as.factor(year),
     civilian_race = factor(civilian_race, levels = c("white", "black", "hispanic", "other")),
     civilian_gender = as.factor(civilian_gender),
