income force graph normalization

--- a/raw_data/graphing_ppcs.Rmd
+++ b/raw_data/graphing_ppcs.Rmd
@@ -20,6 +20,7 @@ graph_ppcs <- merged_ppcs
 
 ```{r income bar graph}
 # force graph comparing income and race
+# normalize based on count of incidents involving force over number of incidents
 
 graph_ppcs$civilian_income <- recode_factor(graph_ppcs$civilian_income,
                                             "1" = '< $20,000',
@@ -38,18 +39,19 @@ graph_ppcs %>%
   ylab("Number of Interactions Involving Force") +
   labs(fill = "Civilian Race") 
 
-# white removed
 graph_ppcs %>%
-  filter(civilian_race != "white") %>% 
   filter(!is.na(civilian_income)) %>%
-  group_by(civilian_income) %>%
+  group_by(civilian_income, civilian_race) %>%
+  mutate(incident_count = n()) %>%
   filter(force == 1) %>%
+  summarize(force_count = n(), incident_count = mean(incident_count)) %>%
+  mutate(prop = force_count / incident_count) %>%
   ggplot() +
-  geom_bar(aes(x = civilian_income, fill = civilian_race), color = "white", position = "dodge") +
+  geom_col(aes(x = civilian_income, y = prop, fill = civilian_race), color = "white", position = "dodge") +
   coord_flip() +
   xlab("Civilian Income") + 
   ylab("Number of Interactions Involving Force") +
-  labs(fill = "Civilian Race")
+  labs(fill = "Civilian Race") 
 
 ```
 
