--- a/raw_data/graphing_ppcs.Rmd
+++ b/raw_data/graphing_ppcs.Rmd
@@ -194,8 +194,17 @@ forces
 
 ```
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
+```{r number of face-to-face contacts}
+merged_ppcs %>%
+  filter(!is.na(num_face_to_face)) %>%
+  ggplot(aes(x = num_face_to_face)) +
+  geom_histogram(color = "white", fill = "indianred1", bins = 11) +
+  geom_vline(xintercept = median(na.omit(merged_ppcs$num_face_to_face)), color = "blue", lwd = 1.5, linetype = "dashed") +
+  geom_vline(xintercept = mean(na.omit(merged_ppcs$num_face_to_face)), color = "green3", lwd = 1.5, linetype = "dashed") +
+  scale_y_log10() + 
+  scale_x_log10() +
+  ylab("Frequency") +
+  xlab("Number of Face-To-Face Contacts with Police")
+  
+```
 
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
-
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
