--- a/raw_data/graphing_ppcs.Rmd
+++ b/raw_data/graphing_ppcs.Rmd
@@ -15,8 +15,9 @@ library(ggplot2)
 library(modelr)
 library(dplyr)
 library(ggthemes) 
-
+theme_set(theme_classic())
 load("merged_ppcs.RData")
+
 graph_ppcs <- merged_ppcs
 
 ```
@@ -64,25 +65,27 @@ graph_ppcs %>%
 
 ```{r polar-and-flip-plot-of-force-by-race}
 
-x <- merged_ppcs %>% filter(civilian_race != "white") %>% group_by(civilian_race) %>% summarize(race_count = n())
+x <- merged_ppcs %>% filter(civilian_race != "white") %>% group_by(year, civilian_race) %>% tally(name = "Civilian count")
 
 plot <- merged_ppcs %>%
   filter(civilian_race != "white") %>%
-  group_by(civilian_race, force) %>%
+  group_by(year, civilian_race, force) %>%
   filter(force == 1) %>%
-  summarize(force_count = n())
+  tally(name = "Force count")
 
-plot_ <- full_join(plot, x)
+plot_ <- full_join(x, plot)
 
-plot_ <-plot_ %>%  
-  mutate(prop = force_count / race_count) 
+plot_ <-plot_ %>% 
+  filter(!is.na(`Force count`), !is.na(`Civilian count`))%>%
+  mutate(prop = `Force count` / `Civilian count`) 
 
 
-bar <-  ggplot(data = plot_,  aes(x=civilian_race, y=prop, fill=force_count)) +
+bar <-  ggplot(data = plot_,  aes(x=civilian_race, y=prop, fill=civilian_race)) +
   geom_bar( stat="identity", position = "dodge") + 
   labs(fill = "Size of civilian race that force was used") +
   xlab('Civilian Race') +
-  ylab('Proportion of force')
+  ylab('Proportion of force')+
+   facet_wrap(~ year)
 
 
 bar
@@ -221,5 +224,11 @@ merged_ppcs %>%
   xlab("Year") + 
   ylab("Number of Incidents") + 
   scale_y_continuous(labels = comma)
+```
+
+
+```{r}
+plot4 <- merged_ppcs%>%
+  group_by(population_size, civilian_arrested)
 ```
 
